--- a/package.json
+++ b/package.json
@@ -8,12 +8,23 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.15.11",
+    "@react-navigation/native": "^6.0.6",
+    "@react-navigation/stack": "^6.0.11",
+    "axios": "^0.24.0",
     "expo": "~43.0.0",
+    "expo-ads-admob": "^11.0.3",
+    "expo-font": "^10.0.3",
+    "expo-notifications": "^0.13.3",
+    "expo-splash-screen": "^0.13.5",
     "expo-status-bar": "~1.1.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.2",
-    "react-native-web": "0.17.1"
+    "react-native-confirmation-code-field": "^7.1.0",
+    "react-native-uuid": "^2.0.1",
+    "react-native-web": "0.17.1",
+    "socket.io-client": "^4.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
