--- a/app.json
+++ b/app.json
@@ -2,7 +2,7 @@
   "expo": {
     "name": "Alligator",
     "slug": "alligator",
-    "version": "1.1.1",
+    "version": "1.1.2",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "splash": {
@@ -18,6 +18,9 @@
     ],
     "ios": {
       "supportsTablet": true,
+      "config": {
+        "googleMobileAdsAppId": "ca-app-pub-1470582515457694~9134184299"
+      },
       "bundleIdentifier": "com.alligatorgames.alligator"
     },
     "android": {
